--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	
+<div id="text">
+	Welcome to the world of Web development
+</div>	
 
 
     <script type="text/javascript" src="./script.js">
